[package]
name = "axact"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.10", features = ["macros"] }
futures = "0.3.26"
serde_json = "1.0.94"
sysinfo = "0.28.2"
tokio = { version = "1.26.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "fs",
] }
tokio-stream = { version = "0.1.12", features = ["sync"] }
